修改了文本

--- a/Problem set/《算法竞赛进阶指南》-树形地铁系统.md
+++ b/Problem set/《算法竞赛进阶指南》-树形地铁系统.md
@@ -52,7 +52,7 @@ int main()
 	{
 		cin >> a >> b;
 		a = '0' + a + '1';
-		b = '0' + b + '1';//¹¹ÔìÒ»¸ö¸ù½Úµã£¬ÕâÑù²»ÓÃ´¦Àí±ß½çÇé¿ö 
+		b = '0' + b + '1';//构造根节点，这样不用处理了边界
 		if(dfs(a,ua) == dfs(b,ub))
 		{
 			cout << "same" << endl;
